[tool.poetry]
name = "corona"
version = "0.1.0"
description = ""
authors = ["Leonardo Castorina <leonardo.castorina98@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
seaborn = "^0.10.1"
jupyterlab = "^2.1.3"
COVID19Py = "^0.3.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
